test/corpus/class-declaration.txt
===
Class declaration
===

class Banana
    constructor ()
        this.name = 'Banana'

    getName ()
        return this.name

---
(source_file
    (class_declaration
        (identifier)
        (indent)
        (class_body
            (method_definition
                (identifier)
                (param_list)


            )

            (method_definition
                (identifier)
                (param_list)

            )
        )
    )
)
